sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: ';' expected but ',' found.
    if (plusPetit(i+1,i)) {echange(i,i+1),e=e+1}
                                         ^AlgCocktailSort1:10: error: ';' expected but ',' found.
    if (plusPetit(i,i+1)) {echange(i,i+1),e=e+1}
                                         ^